fix sonar feedback